tdf#136766 Zoom slider in calc print preview has white background

I cannot figure out any way to make transparent stuff on the toolbar
behave under all rendering backends, so just revert this

this reverts
    commit 00cffc20e40b2412c7e9867eed24c9834504e24f
    Date:   Mon Sep 7 13:28:33 2020 +0200
tdf#135181 Calc print preview zoom slider print preview not
transparent (gen)

    commit 444c7c736be7545344298a9cbb3a69886edc5ecb
    Date:   Mon May 18 18:23:13 2020 +0200
    tdf#125538 fix background of zoom control

Change-Id: I7c351796b2c0778c1520fc8177d05567b2ae8a48
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/116982
Tested-by: Jenkins
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>
(cherry picked from commit d693223b84b518701d308678801ccc50877490dc)